--- a/style/main.scss
+++ b/style/main.scss
@@ -2,6 +2,8 @@
 @import 'allMixin';
 @import 'navbar';
 $font-main: 'Raleway', sans-serif;
+$font-roboto: 'Roboto', sans-serif;
+$ftr-para-color: rgb(176, 174, 174);
 
 * {
     margin: 0;
@@ -13,6 +15,7 @@ $font-main: 'Raleway', sans-serif;
 html {
     font-size: 62.5%;
     font-family: sans-serif;
+
 
 
 
@@ -116,7 +119,7 @@ body {
             letter-spacing: -.3rem;
             font-weight: 500;
             line-height: 4.5rem;
-            font-family: 'Roboto', sans-serif;
+            font-family: $font-roboto;
 
 
 
@@ -158,7 +161,7 @@ body {
 
                 font-size: 2.56rem;
                 line-height: 3.2rem;
-                font-family: 'Roboto', sans-serif;
+                font-family: $font-roboto;
                 font-weight: 300;
 
                 span {
@@ -225,6 +228,8 @@ body {
         .cards {
             @include cards;
             @include last-card;
+            position: relative;
+            @include hover-effect;
 
 
         }
@@ -310,8 +315,10 @@ body {
                     align-items: center;
 
                     .cards {
+                        position: relative;
                         background-color: black !important;
                         @include cards;
+                        @include hover-effect;
 
                         .address {
                             p {
@@ -360,7 +367,6 @@ body {
     display: flex;
 
     .outer-half {
-        border: 1px solid;
         height: 100%;
         width: 50%;
     }
@@ -469,7 +475,7 @@ body {
             justify-content: end;
             height: 100%;
             line-height: 2rem;
-            font-family: 'Roboto', sans-serif;
+            font-family: $font-roboto;
 
 
             #social-media {
@@ -525,9 +531,11 @@ body {
     }
 }
 
+// writing section
+
 .writing-sec {
     color: black;
-    height: 70rem;
+    height: 66rem;
     background-color: white;
     border-radius: .5rem;
 
@@ -537,19 +545,20 @@ body {
         padding-left: 14rem;
         border-bottom: .1rem solid #9FA1A339;
         @include flex-box;
-        p{
+
+        p {
             width: max-content;
             font-size: 3rem;
             font-weight: bold;
-            transform: scale(2.5,1.5);
+            transform: scale(2.5, 1.5);
             letter-spacing: -.2rem;
 
-            
+
 
         }
-        
-        
-       
+
+
+
 
     }
 
@@ -557,21 +566,346 @@ body {
         height: 38rem;
         padding: 0 2.8rem;
         border-bottom: .1rem solid #9FA1A339;
-        .writing-div2-inner{
+
+        .writing-div2-inner {
+
             display: grid;
-            grid-template-columns: repeat(4,30.6rem);
+            grid-template-columns: repeat(4, 30.6rem);
             grid-template-rows: 38rem;
 
+            #writing-logo {
+                padding: 6rem 3rem;
+            }
+
+            .writing-image {
+                height: 14rem;
+                position: relative;
+                width: 14rem;
+                background: rgb(255, 60, 0) url(/images/footer\ logo.png) no-repeat center;
+                background-size: 50%;
+                border-radius: 1rem;
+            
+                &::before{
+                    content: "";
+                    position: absolute;
+                    background:url(/images/gradient-color.jpg) no-repeat center center/cover;
+                    opacity: .7;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 1rem;
+
+                }
+
+            }
+
+            .wrt-grid-item {
+                padding: 2.8rem;
+                @include flex-box;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: start;
+                position: relative;
+                @include hover-effect;
+
+
+
+            }
+
+            .wrt-new {
+                position: relative;
+
+                &::after {
+                    content: "new";
+                    position: absolute;
+                    top: 10%;
+                    border: .1rem solid;
+                    background-color: black;
+                    color: white;
+                    padding: .2rem.5rem;
+                    border-radius: 2rem;
+                    font-size: .8rem;
+
+                }
+            }
+
         }
-        
+
+        .wrt-hd {
+            margin-top: 4rem;
+            font-size: 2.4rem;
+
+        }
+
+        .wrt-lower-div {
+            width: 100%;
+
+            &>p {
+                font-size: 1.4rem;
+                color: rgb(48, 47, 47);
+                margin-bottom: .8rem
+            }
+
+            div {
+                @include flex-box;
+                align-items: center;
+
+                p {
+                    font-size: 1.3rem;
+                    color: rgb(117, 117, 117) !important;
+                }
+
+                i {
+                    height: 2.4rem;
+                    width: 2.4rem;
+                    border-radius: 50%;
+                    @include flex-box;
+                    justify-content: center;
+                    transform: rotate(45deg);
+                    font-size: 1.2rem;
+                    color: rgb(117, 117, 117) !important;
+                    background-color: rgb(222, 220, 220);
+                    ;
+                }
+            }
+        }
+
 
     }
 
     .writing-div3 {
-        height: 15rem;
-        div{
-            border: .1rem solid black;
-            background-color: yellow;
+        height: 11rem;
+        padding-left: 5rem;
+        @include flex-box;
+
+        p {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            font-size: 1.15rem;
+            color: rgb(130, 129, 129);
+        }
+
+        p i {
+            font-size: 3rem;
+            color: black;
+
+        }
+    }
+}
+
+// footer section
+.footer-sec {
+    position: relative;
+    height: 77rem;
+
+
+    .footer-abs-div {
+        position: absolute;
+        height: 10rem;
+        background-color: #ffe600;
+        width: 100%;
+
+    }
+
+    footer {
+        width: 100%;
+        position: absolute;
+        height: 70rem;
+        top: 7rem;
+        border-radius: .5rem;
+        background-image: radial-gradient(circle at 10% 130%, rgb(83, 12, 1) 5%, rgb(5, 5, 5) 49%, rgb(0, 0, 0) 60%);
+        font-family: $font-roboto;
+    }
+
+    .footer-upper-outer {
+        height: 88%;
+        border-bottom: .1rem solid #9FA1A339;
+
+        &>div {
+            height: 100%;
+            margin: 0 2.8rem;
+            display: grid;
+            grid-template-columns: repeat(4, 30.6rem);
+            grid-template-rows: 1fr;
+
+        }
+
+        .ftr-inner {
+            height: 100%;
+            padding: 10rem 2rem 3rem 3rem;
+            @include flex-box;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: start;
+
+        }
+
+        #ftr-logo {
+            height: 6.5rem;
+            width: 6.5rem;
+        }
+
+        .address-div {
+            font-weight: 300;
+            height: 30%;
+            line-height: 1.7rem;
+            @include flex-box;
+            flex-direction: column;
+            align-items: start;
+            gap: 2rem;
+            color: $ftr-para-color;
+
+            h3 {
+                font-weight: 300;
+                font-size: 1.15rem;
+                color: rgb(226, 226, 226);
+            }
+        }
+
+        .ftr-inner2 {
+            @include flex-box;
+            justify-content: end;
+
+            p {
+                height: 30%;
+                line-height: 1.5rem;
+                font-size: .9rem;
+                font-weight: 300;
+                color: $ftr-para-color;
+
+
+
+            }
+        }
+
+    }
+
+    .ftr-inner3 {
+        #ftr-link {
+            width: 100%;
+            list-style: none;
+            font-size: 2.1rem;
+            font-weight: 300;
+
+            li {
+                margin-bottom: 1rem;
+                @include flex-box;
+                cursor: pointer;
+                padding: .3rem 1rem;
+                position: relative;
+
+                @include hover-effect;
+
+            }
+
+            li i {
+                color: $ftr-para-color;
+                opacity: 0.4;
+            }
+
+
+        }
+
+        #newsletter {
+            width: 100%;
+            height: 30%;
+
+            p {
+                margin-bottom: 2rem;
+                font-size: 1.2rem;
+                font-weight: 300;
+            }
+
+            .email-input {
+                border: .1rem solid rgb(120, 119, 119);
+                height: 4.5rem;
+                @include flex-box;
+                border-radius: .4rem;
+                background-color: rgb(39, 39, 39);
+                color: white;
+                opacity: 0.8;
+
+
+                input {
+                    height: 100%;
+                    border-style: none;
+                    background: none;
+                    padding-left: 1rem;
+
+                    &:focus {
+                        outline: none;
+                    }
+
+                }
+
+                i {
+                    margin-right: 1rem;
+                    height: 2.7rem;
+                    width: 2.7rem;
+                    border-radius: 50%;
+                    @include flex-box;
+                    justify-content: center;
+                    background-color: rgb(77, 76, 76);
+
+                }
+
+            }
+        }
+    }
+
+    .ftr-inner4 {
+        ul {
+            margin-bottom: 2rem;
+            list-style: none;
+
+            li {
+                padding: .3rem .2rem;
+                margin-bottom: 0rem;
+                font-size: 1.2rem;
+                color: $ftr-para-color;
+                position: relative;
+                @include hover-effect;
+                cursor: pointer;
+            }
+        }
+
+        .partner-ship {
+            min-height: 30%;
+
+            p {
+                color: $ftr-para-color;
+                line-height: 1.2rem;
+            }
+
+            span {
+                display: inline-block;
+                height: 2.5rem;
+                width: 5rem;
+                margin-top: 1.3rem;
+                margin-right: .5rem;
+                border-radius: .3rem;
+            }
+
+            .partner1 {
+                background: url(/images/partner1.jpg) no-repeat center center/cover;
+            }
+
+            .partner2 {
+                background: url(/images/partner2.jpg) no-repeat center center/cover;
+            }
+        }
+    }
+
+    .footer-lower {
+        height: calc(70rem - 88%);
+        margin: 0 2.8rem;
+        display: flex;
+
+        div {
+            width: 50%;
+            height: 100%;
+            padding: 0 3rem;
+            @include flex-box;
         }
     }
 }
