--- a/style/_allMixin.scss
+++ b/style/_allMixin.scss
@@ -5,6 +5,20 @@
 
 }
 
+
+@mixin hover-effect{
+    &:hover::before {
+        content: "";
+        position: absolute;
+        background-color: rgba(225, 225, 102, 0.4);
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+
+    }
+}
+
 @mixin left-bdr-btn {
     .left-bdr-btn {
         position: relative;
@@ -25,15 +39,7 @@
             font-size: 1.5rem;
         }
 
-        &:hover::before {
-            content: "";
-            position: absolute;
-            background-color: rgba(225, 225, 102, 0.4);
-            width: 100%;
-            height: 100%;
-            left: 0;
-
-        }
+        @include hover-effect;
 
     }
 }
