--- a/style/_navbar.scss
+++ b/style/_navbar.scss
@@ -1,99 +1,138 @@
-@mixin navar-css{
-    
+@mixin navar-css {
 
-.nav-container {
-    border-bottom: .1rem solid #9FA1A339;
-    
-    height: 7.3rem;
 
-    .navbar {
-        font-family: $font-main;
-        height: 100%;
-        margin: 0 2.8rem;
-        @include flex-box;
+    .nav-container {
+        border-bottom: .1rem solid #9FA1A339;
 
-        .logo {
-            font-size: 1.3rem;
-        }
+        height: 7.3rem;
 
-        .menu {
-            width: 61rem;
+        .navbar {
+            font-family: $font-main;
+            height: 100%;
+            margin: 0 2.8rem;
             @include flex-box;
 
-            .nav-link {
-                span {
-                    background-color: white;
-                    color: black;
-                    border-radius: 1rem;
-                    font-size: 1rem;
-                    font-weight: 500;
-                    padding: 0 .3rem;
-
-                }
-
-                margin-left: 2.3rem;
-                font-family: sans-serif;
-                width: 29rem;
-                list-style: none;
-                @include flex-box;
-                justify-content: space-between;
-                opacity: .95;
-                font-size: 1.2rem;
-                font-weight: 100
+            .logo {
+                font-size: 1.3rem;
             }
 
-            .nav-btn-ham {
+            .menu {
+                width: 61rem;
                 @include flex-box;
 
-                #investor-btn {
-                    position: relative;
-                    
-                    border-radius: .3rem;
+                .nav-link {
+                    span {
+                        background-color: white;
+                        color: black;
+                        border-radius: 1rem;
+                        font-size: 1rem;
+                        font-weight: 500;
+                        padding: 0 .3rem;
 
-                    div {
-                        @include flex-box;
-                        width: 13rem;
-                        height: 3.4rem;
-                        padding-left: 1.7rem;
-                        justify-content: center;
+                    }
+
+                    margin-left: 2.3rem;
+                    font-family: sans-serif;
+                    width: 29rem;
+                    list-style: none;
+                    @include flex-box;
+                    justify-content: space-between;
+                    opacity: .95;
+                    font-size: 1.2rem;
+                    font-weight: 100
+                }
+
+                .nav-btn-ham {
+                    @include flex-box;
+                    align-items: center;
+                    gap: 3rem;
+
+                    #investor-btn {
+                        position: relative;
+
                         border-radius: .3rem;
-                        border: .1rem solid #9FA1A339;
-                        background: rgba(0, 0, 0, 0.84);
 
-                        h1 {
-                            
-                            font-size: 1.1rem;
+                        div {
+                            @include flex-box;
+                            width: 13rem;
+                            height: 3.4rem;
+                            padding-left: 1.7rem;
+                            justify-content: center;
+                            border-radius: .3rem;
+                            border: .1rem solid #9FA1A339;
+                            background: rgba(0, 0, 0, 0.84);
+
+                            h1 {
+
+                                font-size: 1.1rem;
+
+                            }
+                        }
+
+                        &::before {
+                            content: "";
+                            border-radius: .3rem;
+                            background-color: rgb(120, 119, 119);
+                            position: absolute;
+                            height: 100%;
+                            width: 100%;
+                            z-index: -1;
+                            filter: blur(.01rem);
 
                         }
                     }
 
-                    &::before {
-                        content: "";
-                        border-radius: .3rem;
-                        background-color: rgb(225, 221, 221);
-                        position: absolute;
-                        height: 100%;
-                        width: 100%;
-                        z-index: -1;
-                        filter: blur(.01rem);
+                    #ham-btn {
+                        height: 2rem;
+                        width: 2.4rem;
+                        position: relative;
+                        cursor: pointer;
+
+
+                        .hamline {
+                            border: .1rem solid;
+                            width: .1rem;
+                            height: 100%;
+                            position: absolute;
+                            transition: all .6s;
+
+                            &.line1 {
+                                left: 25%;
+                            }
+
+                            &.line2 {
+                                left: 50%;
+                            }
+
+                            &.line3 {
+                                left: 75%;
+                            }
+
+                            &.line4 {
+                                left: 100%;
+                            }
+
+
+
+                        }
+                        &:hover{
+                            .line2{
+                                left: 40%;
+                            }
+                            .line3{
+                                left: 50%;
+                            }
+                        }
 
                     }
-                }
 
-                #ham-btn {
-                    height: 4rem;
-                    width: 5rem;
-                    border: 1px solid red;
+
 
                 }
-
 
 
             }
 
-
         }
-
     }
-}
 }
