--- a/style/main.scss
+++ b/style/main.scss
@@ -393,38 +393,90 @@ body {
             width: 20rem;
             height: 20rem;
         }
-        .upper-logo{
+
+        .upper-logo {
             position: relative;
-            &::before{
-                content: "helo";
+// border line bototm
+            &::before {
+                content: "";
                 position: absolute;
                 bottom: 0;
                 width: 100vw;
                 height: .01rem;
                 background-color: #9FA1A339;
-               
+
             }
-            
+
         }
 
         .left-up {
             background-color: rgba(255, 255, 255, 0.1);
             border-bottom-right-radius: 50%;
             border-top-left-radius: 100%;
+            position: relative;
+
+            @include logo-cut;
+
+            .cut1 {
+                left: 40%;
+                top: -10%;
+                transform: rotate(-40deg);
+            }
+
+            .cut2 {
+
+                transform: rotate(-85deg);
+                bottom: 30%;
+                left: -2%;
+            }
+
 
         }
 
         .right-up {
-            background-color: rgba(255, 255, 255, 0.1);
+
             border-bottom-left-radius: 50%;
             border-top-right-radius: 100%;
             background: url(/images/gradient-color.jpg) no-repeat center center/cover;
+            position: relative;
+            @include logo-cut;
+
+            .cut3 {
+                left: 40%;
+                top: -10%;
+                transform: rotate(-40deg);
+                transform: scale(1);
+            }
+
+            .cut4 {
+
+                transform: rotate(40deg);
+                bottom: 30%;
+                right: -2%;
+            }
         }
 
         .left-down {
             background-color: rgba(255, 255, 255, 0.1);
             border-top-right-radius: 50%;
             border-bottom-left-radius: 100%;
+            position: relative;
+            overflow: hidden;
+            @include logo-cut;
+
+            .cut5 {
+                left: -2%;
+                top: 20%;
+                transform: rotate(50deg) scale(-1);
+             
+            }
+
+            .cut6 {
+
+                left: 30%;
+                top: 60%;
+                transform: rotate(20deg) scale(-1);
+            }
 
         }
 
@@ -432,6 +484,24 @@ body {
             background-color: rgba(255, 255, 255, 0.1);
             border-top-left-radius: 50%;
             border-bottom-right-radius: 100%;
+            position: relative;
+            overflow: hidden;
+            @include logo-cut;
+            .cut {
+                border-left: 50px solid #2A0803;}
+            .cut7 {
+                right: -1%;
+                top: 30%;
+                transform: rotate(85deg);
+             
+            }
+
+            .cut8 {
+
+                right: 38%;
+                top: 70%;
+                transform: rotate(130deg);
+            }
         }
 
 
