--- a/style/main.css
+++ b/style/main.css
@@ -1158,6 +1158,10 @@ body {
       padding: 0 3rem;
       display: flex;
       justify-content: space-between;
-      align-items: center; }
+      align-items: center;
+      font-size: 1.2rem;
+      color: #b0aeae; }
+      .footer-sec .footer-lower div span {
+        color: white; }
 
 /*# sourceMappingURL=main.css.map */
